# fsid

./: .gitignore  Cargo.toml  readme.md
resources/Canidae/: Canidae.tsv
resources/Felidae/: Felidae.tsv
src/application/: audit_service.rs  mining_service.rs  mod.rs
src/application/port/incoming/: audit_use_case.rs  mining_use_case.rs  mod.rs
src/application/port/outgoing/: get_all_distances.rs  get_distance.rs  load_records.rs  mod.rs
src/domain/: distance.rs  grade.rs  mod.rs  record.rs  species.rs
