[package]
name = "fsid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
csv = "1.1.6"
petgraph = "0.6.3"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
futures = "0.3"

[profile.profiling]
inherits = "release"
debug = true

[[bin]]
name = "fsid-cli"
path = "bin/cli/main.rs"
bench = false

[[bin]]
name = "profilling-example"
path = "bin/profilling/main.rs"
bench = false

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "audit_algo"
harness = false

